# kiwi

./: Cargo.toml  dockerfile
.github/workflows/: deploydev.yml
config/: default.toml
docs/design/: bpm-catalog.pu  bpm-customers.pu  bpm-lending.pu  bpm.pu  domain.pu
src/: domain.rs  infra.rs  main.rs  modules.rs
src/domain/: discipline.rs  location.rs  race.rs
src/infra/: config.rs  core.rs  db.rs  error.rs
src/infra/api/: handler.rs  problem.rs  response.rs
src/infra/core/: page.rs  result.rs
src/infra/db/: client.rs  cosmos.rs  mongo.rs  traits.rs
src/infra/errors/: error.rs
src/lib/: lib.rs  threadpool.rs  worker.rs
src/modules/: race.rs
src/modules/common/: page.rs
src/modules/race/: controller.rs  create.rs  find.rs  get.rs
tests/integration/: race.rest
