[package]
name = "kiwi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
axum = "0.5"
serde = { version = "1", features = ["derive"] }
mongodb = "2.3.1"
log = "0.4.17"
env_logger = "0.9.3"
error-stack = "0.2.4"