[package]
name = "kiwi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tokio = { version = "1.21", features = ["full"] }
axum = "0.6.0"
serde = { version = "1", features = ["derive"] }
mongodb = "2.3.1"
futures = "0.3.25"
bson = "2.4.0"
serde_json = "1.0.89"
